@@ -1,3 +1,0 @@
-normal entities/pickable_items.png 2 100 0
-16	32	16	16	8	25	2	2
-16	48	16	16	8	25	2	2
