@@ -1,8 +1,0 @@
-1 entities/pickable_items.png 1 0 -1
-0	0	16	16	8	13	1	1
-
-5 entities/pickable_items.png 1 0 -1
-16	0	16	16	8	13	1	1
-
-10 entities/pickable_items.png 1 0 -1
-32	0	16	16	8	13	1	1
